--- a/google.css
+++ b/google.css
@@ -1,28 +1,28 @@
-nav {
-	position: absolute;
-	top:0;
-	left: 0;
-	right: 0;
+html, body, div#wrapper {
+	margin: 0px;
+	padding: 0px;
+
 }
 
-
-nav ul div {
-	width: 100%;
-
+nav {
+	top:0;
+	right: 0;
+    height: 233px;
 }
 
 ul  {
-	display: inline-block;
 	list-style: none;
-	width: 50%;
 	margin-right: 10px;
-
 }
 
-nav ul div li {
-    display: inline-block;
+nav ul li {
     float: right;
-    margin-left: 10px;
+    padding-right: 10px;
+}
+
+ul li {
+	display: inline;
+    padding-right: 10px;
 }
 
 a {
@@ -36,18 +36,36 @@ a:hover {
 	text-decoration: underline;
 }
 
-nav ul div li a{
+nav ul li a{
 	color:black;
 	opacity: .75;
-}
-
-body div#wrapper {
-    height: 233px;
 }
 
 div#go {
     margin: 0 auto;
     width: 300px;
+}
+
+div#footer {
+	position:absolute;
+	bottom: 0px;
+	width: 100%;
+	border-top: 1px solid #e4e4e4;
+	background-color: #f2f2f2;
+}
+
+div#footer-left {
+	float: left;
+}
+
+div#footer-right {
+	float: right;
+}
+
+img[alt="Logo Google"] {
+    margin: 0 50%;
+    position: relative;
+    left: -136px;
 }
 
 input[name="search-input"] {
@@ -60,31 +78,21 @@ input[name="search-input"] {
     height: 26px;
 }
 
-img[alt="Logo Google"] {
-    margin: 0 50%;
-    position: relative;
-    left: -136px;
-}
-
 input[type="Submit"] {
     padding: 4px 15px;
     margin: 20px 0px 5px 5px;
     border-radius: 1px;
-   	border: 1px solid #f2f2f2;
+    border: 1px solid #f2f2f2;
     box-shadow: 1px black;
     color: gray;
     border-radius: 3px;
+    background-image: -webkit-linear-gradient(top,#f5f5f5,#f1f1f1);
 }
 
 input[type="Submit"]:hover {
     color: black;
     border: 1px solid lightgray;
-    background: #f2f2f2;
     border-radius: 3px;
+    background-image: -webkit-linear-gradient(top,#f8f8f8,#f1f1f1);
 }
 
-div#footer-right {
-	position:fixed;
-	bottom: 0px;
-	right: 0px;
-}
